--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "test": "vitest run -c vitest.unit.config.mts"
   },
   "keywords": [],
   "author": "",
@@ -21,8 +21,14 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.17",
+    "npm-run-all": "^4.1.5",
     "prisma": "^6.7.0",
+    "supertest": "^7.1.1",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "unplugin-swc": "^1.5.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.3"
   }
 }
