--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "test": "vitest run -c vitest.unit.config.mts"
+    "test": "vitest run -c vitest.unit.config.mts",
+    "test:watch": "vitest -c vitest.unit.config.mts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@types/node": "^22.15.17",
     "npm-run-all": "^4.1.5",
     "prisma": "^6.7.0",
