--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch src/infra/http/server.ts",
     "test": "vitest run -c vitest.unit.config.mts",
     "test:watch": "vitest -c vitest.unit.config.mts"
   },
@@ -14,23 +14,29 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
-    "@prisma/client": "^6.7.0",
+    "@fastify/jwt": "^9.1.0",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
+    "@prisma/client": "^6.9.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
-    "fastify": "^5.3.2",
+    "fastify": "^5.4.0",
+    "fastify-type-provider-zod": "^5.0.1",
     "nanoid": "^5.1.5",
-    "zod": "^3.24.4"
+    "zod": "^3.25.65",
+    "zod-validation-error": "^3.5.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
-    "@types/node": "^22.15.17",
+    "@types/node": "^22.15.32",
     "npm-run-all": "^4.1.5",
-    "prisma": "^6.7.0",
+    "prisma": "^6.9.0",
     "supertest": "^7.1.1",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.19.4",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
-    "unplugin-swc": "^1.5.2",
+    "unplugin-swc": "^1.5.4",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.3"
+    "vitest": "^3.2.3"
   }
 }
